// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppRootComponent matches snapshot with default props 1`] = `
<Component>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(LoginContainer)",
        "type": [Function],
      }
    }
    path="/login"
  />
  <Route
    component={[Function]}
    path="/"
  />
  <Route
    component={[Function]}
    path="/stubs"
  />
  <Redirect
    to="/login"
  />
  <StubsRoot />
</Component>
`;

exports[`AppRootComponent matches snapshot with default props 2`] = `
<Component>
  <Route
    component={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "displayName": "Connect(LoginContainer)",
        "type": [Function],
      }
    }
    path="/login"
  />
  <Route
    component={[Function]}
    path="/"
  />
  <Route
    component={[Function]}
    path="/stubs"
  />
  <StubsRoot />
</Component>
`;
